<resources>
    <string name="app_name">PolyApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Développé par Lypotech Ltd.</string>
    <string name="nav_header_subtitle">Nous contacter : contact@lypotech.org</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_gallery">Mes amis</string>
    <string name="menu_slideshow">Envoyer un fichier</string>


    <string name="title_activity_edtactivity">EDTActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="buttonsend">Envoyer</string>
    <string name="buttonlisten">Listen</string>
    <string name="buttongetnewdevices">Get new devices</string>
    <string name="buttonsgetvsible">Get visible</string>
    <string name="textreceived">Text received :</string>
    <string name="textreceiveddisplayed">----------</string>
    <string name="texttosend">----------</string>
    <string name="listdevices"></string>
    <string name="listnewdevices"></string>
    <string name="textstatus">Status</string>

</resources>