<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bluetooth.BluetoothActivity">

    <ListView
        android:id="@+id/listdevices"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonlisten">

    </ListView>

    <TextView
        android:id="@+id/textreceiveddisplayed"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/textreceiveddisplayed"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/buttonsend"
        tools:layout_editor_absoluteX="75dp" />

    <Button
        android:id="@+id/buttonlisten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/buttonlisten"
        app:layout_constraintStart_toEndOf="@+id/buttongetvisible"
        app:layout_constraintTop_toTopOf="@+id/buttongetvisible" />

    <Button
        android:id="@+id/buttongetvisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/buttonsgetvsible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonsend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:text="@string/buttonsend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listdevices" />

    <TextView
        android:id="@+id/textstatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/textstatus"
        app:layout_constraintStart_toEndOf="@+id/buttonlisten"
        tools:layout_editor_absoluteY="45dp" />

</androidx.constraintlayout.widget.ConstraintLayout>